# tickets_12306_rs

tickets_12306/: Cargo.toml
tickets_12306/src/: main.rs
